# raspberry_robot

./: .gitignore  CMakeLists.txt  README.md  package.xml  usefull_commands.txt
config/: map.yml  rqt_AG_Robotic.perspective  rviz_ar_sys_odometry.rviz  rviz_aruco_odometry.rviz  rviz_config_AG_robotic.rviz
config/aruco_boards/: board1.yml  board2.yml  board3.yml  board4.yml  board5.yml  board6.yml  boards.yml
config/camera_info/: camera_calibration.yaml  camera_calibration_gopro.yaml  camera_calibration_gopro_1920_1080.yaml
docs/: useful_commands.txt
launch/: AG_Robotics_PC_slave.launch  AG_Robotics_camera_server.launch  camera_calibration.launch  camera_calibration_remote.launch  camera_init.launch  odometry_map.launch  robot_driver.launch
models/robot_model/: model.config  model.sdf
scripts/: conversions.py  gazebo2rviz.py  naming.py  parse.py
src/: PID.py  RobotController.py  aruco_odometry_publisher.cpp  aruco_system_viewer.cpp  robdos_controller.py  robot_servo_controller.cpp  robot_to_interactive_marker.py  robot_twist_subscriber.cpp  waypoint_interactive_publisher.py
src/test/: aruco_simple.cpp
worlds/: gazebo_dynamics.world
