<?xml version="1.0"?>
<package>
    <name>raspberry_robot</name>
    <version>0.0.0</version>
    <description>The raspberry_robot package</description>

    <maintainer email="francisc0garcia@hotmail.com">Francisco Garcia</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>aruco</build_depend>
    <build_depend>aruco_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>aruco</run_depend>
    <run_depend>aruco_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>tf</run_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>